--- a/src/components/seller-profile/seller-profile.html
+++ b/src/components/seller-profile/seller-profile.html
@@ -67,7 +67,7 @@
                 text="Whatsapp"
                 class="flex-fill ml-1"
                 :icon="['fab', 'whatsapp']"
-                @click="openWhatsapp(postedByData.phone)"
+                @click="openWhatsapp(postedByData.whatsappNumber)"
                 width= "100%"
               />
               <!-- prettier-ignore -->
