--- a/src/components/spare-detail-table/spare-detail-table.html
+++ b/src/components/spare-detail-table/spare-detail-table.html
@@ -42,7 +42,7 @@
     </li>
     <li>
       <p>Product Details</p>
-      <p>{{data.desc}}</p>
+      <p>{{data.description}}</p>
     </li>
   </ul>
 </div>
