--- a/src/components/spare-items-list/spare-items-list.html
+++ b/src/components/spare-items-list/spare-items-list.html
@@ -40,18 +40,16 @@
                   class="post-list-carousel"
                 >
                   <Slide
-                    v-for="(image, index) in post.gallery"
+                    v-for="(image, index) in post.galleryImages.split(',')"
                     v-bind:key="index"
                   >
-                    <span class="gallery-counter">{{index+1}}/{{post.gallery.length}}</span>
-                    <img :src="image" class="img-fluid" />
+                    <span class="gallery-counter">{{index+1}}/{{post.galleryImages.split(',').length}}</span>
+                    <img :src="getGalleryImagePath(image,post.imageFolder)" class="img-fluid" />
                   </Slide>
                 </Carousel>
-                <img :src="post.thumb" class="img-fluid post-list-image" @click="listView ? viewPostDetails(post) : ''" />
+                <img :src="getGalleryImagePath(post.displayPicture,post.imageFolder)" class="img-fluid post-list-image" @click="listView ? viewPostDetails(post) : ''" />
               </div>
-                
-                
-                
+
                 <div class="post-details">
                   <div @click="listView ? viewPostDetails(post) : ''">
                     <p class="grid-hide list-view-price">
@@ -92,7 +90,7 @@
                       text="Whatsapp"
                       class="flex-fill mr-1"
                       :icon="['fab', 'whatsapp']"
-                      @click="openWhatsapp(post.phone)"
+                      @click="openWhatsapp(post.whatsappNumber)"
                     />
                     <!-- prettier-ignore -->
                     <Button
