--- a/src/views/lease-a-car-details/lease-a-car-details.html
+++ b/src/views/lease-a-car-details/lease-a-car-details.html
@@ -182,7 +182,7 @@
             type="green"
             text="Whatsapp"
             :icon="['fab', 'whatsapp']"
-            @click="openWhatsapp(leaseData.phone)"
+            @click="openWhatsapp(leaseData.whatsappNumber)"
             width= "100%"
           />
             <!-- prettier-ignore -->
