--- a/src/views/rental-details/rental-details.html
+++ b/src/views/rental-details/rental-details.html
@@ -230,7 +230,7 @@
             type="green"
             text="Whatsapp"
             :icon="['fab', 'whatsapp']"
-            @click="openWhatsapp(rentalData.phone)"
+            @click="openWhatsapp(rentalData.whatsappNumber)"
             width= "100%"
           />
           <!-- prettier-ignore -->
