--- a/src/views/super-dashboard/super-dashboard.html
+++ b/src/views/super-dashboard/super-dashboard.html
@@ -56,7 +56,7 @@
           </div>
           <div
             class="d-flex"
-            v-else-if="key[0] == 'gallery' || key[0] == 'galleryImages' || key[0] == 'dealerLogo' || key[0] == 'profilePicture'"
+            v-else-if="key[0] == 'gallery' || key[0] == 'galleryImages' || key[0] == 'dealerLogo' || key[0] == 'profilePicture' || key[0] == 'displayPicture'"
           >
             <div class="w-50 p-0 d-flex py-1">{{key[0]}}:</div>
             <div class="w-50 p-0 d-flex py-1 flex-wrap">
